# g_action

./: LICENSE.md  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: hello.yaml
src/math_function_slothclaw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/math_functions/: fibonacci.py
tests/: test_fibonacci.py
